# reactnativetest

./: .gitignore  App.tsx  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/reactnativetest/: MainApplication.kt
android/app/src/main/res/values/: strings.xml
backend/: Cargo.toml
backend/src/: main.rs
ios/: Podfile
ios/reactnativetest/: Info.plist
ios/reactnativetest.xcodeproj/: project.pbxproj
src/contents/: CocktailsAlc.tsx  NonCocktailsAlc.tsx  Profile.tsx
src/contents/api/: getCocktailsData.tsx
src/contents/auth/: Login.tsx  auth0-credentials.ts
src/contents/components/: ListItem.tsx
src/contents/utilities/: cocktailType.tsx
